--- a/client/src/locales/de/translation.json
+++ b/client/src/locales/de/translation.json
@@ -389,7 +389,7 @@
   "popup": {
     "title": "Das Thonet-Projekt: Eine digitale Hommage",
     "mainText": "Diese Seite ist ein inoffizielles, nicht-kommerzielles Bildungsprojekt, das der Geschichte und dem Erbe der Bugholzmöbel von Michael Thonet gewidmet ist.",
-    "dedication": "Es ist dem Hobbyisten, Sammler und Restaurator aus Radom – Paweł Michalski – gewidmet.",
+    "dedication": "Es ist dem Hobbyisten, Sammler und Aufbereiter aus Radom – Paweł Michalski – gewidmet.",
     "disclaimer": "Der Name Thonet® ist eine eingetragene Marke der Thonet GmbH. Das Projekt hat rein dokumentarischen und leidenschaftlichen Charakter."
   }
 }
