--- a/client/src/locales/pl/translation.json
+++ b/client/src/locales/pl/translation.json
@@ -389,7 +389,7 @@
   "popup": {
     "title": "Projekt Thonet: Cyfrowy Hołd",
     "mainText": "Ta strona jest nieoficjalnym, niekomercyjnym projektem edukacyjnym, poświęconym historii i dziedzictwu mebli giętych Michaela Thoneta.",
-    "dedication": "Dedykowana jest radomskiemu hobbyście, kolekcjonerowi i restauratorowi – Pawłowi Michalskiemu.",
+    "dedication": "Dedykowana jest radomskiemu hobbyście, kolekcjonerowi i renowatorowi – Pawłowi Michalskiemu.",
     "disclaimer": "Nazwa Thonet® jest zastrzeżonym znakiem towarowym firmy Thonet GmbH. Projekt ma charakter wyłącznie dokumentacyjny i pasjonacki."
   }
 }
