--- a/client/public/locales/de/translation.json
+++ b/client/public/locales/de/translation.json
@@ -391,5 +391,9 @@
     "mainText": "Diese Seite ist ein inoffizielles, nicht-kommerzielles Bildungsprojekt, das der Geschichte und dem Erbe der Bugholzmöbel von Michael Thonet gewidmet ist.",
     "dedication": "Es ist dem Hobbyisten, Sammler und Aufbereiter aus Radom – Paweł Michalski – gewidmet.",
     "disclaimer": "Der Name Thonet® ist eine eingetragene Marke der Thonet GmbH. Das Projekt hat rein dokumentarischen und leidenschaftlichen Charakter."
+  },
+  "seo": {
+    "siteName": "Das Erbe der Bugholzmöbel: Eine digitale Hommage an Michael Thonet",
+    "defaultDescription": "Eine interaktive Hommage an Michael Thonet, einen Pionier der Holzbiegetechnologie. Entdecken Sie sein Leben, seine revolutionären Entwürfe und seinen Einfluss auf das globale Design."
   }
 }
