--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -393,7 +393,7 @@
     "disclaimer": "The Thonet® name is a registered trademark of Thonet GmbH. The project is purely documentary and passion-driven in nature."
   },
   "seo": {
-    "siteName": "The Legacy of Bentwood Furniture: A Digital Tribute to Michael Thonet",
+    "siteName": "Bentwood Legacy: Digital Tribute to Michael Thonet",
     "defaultDescription": "An interactive tribute to Michael Thonet, a pioneer of wood bending technology. Discover his life, revolutionary designs, and impact on global design."
   },
   "notFound": {
