--- a/client/src/locales/de/translation.json
+++ b/client/src/locales/de/translation.json
@@ -390,7 +390,8 @@
     "title": "Das Thonet-Projekt: Eine digitale Hommage",
     "mainText": "Diese Seite ist ein inoffizielles, nicht-kommerzielles Bildungsprojekt, das der Geschichte und dem Erbe der Bugholzmöbel von Michael Thonet gewidmet ist.",
     "dedication": "Es ist dem Hobbyisten, Sammler und Aufbereiter aus Radom – Paweł Michalski – gewidmet.",
-    "disclaimer": "Der Name Thonet® ist eine eingetragene Marke der Thonet GmbH. Das Projekt hat rein dokumentarischen und leidenschaftlichen Charakter."
+    "disclaimer": "Der Name Thonet® ist eine eingetragene Marke der Thonet GmbH. Das Projekt hat rein dokumentarischen und leidenschaftlichen Charakter.",
+    "dedicationButtonTitle": "Widmung"
   },
   "seo": {
     "siteName": "Das Erbe der Bugholzmöbel: Eine digitale Hommage an Michael Thonet",
