--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -390,7 +390,8 @@
     "title": "The Thonet Project: A Digital Tribute",
     "mainText": "This site is an unofficial, non-commercial educational project dedicated to the history and heritage of Michael Thonet's bentwood furniture.",
     "dedication": "It is dedicated to the Radom-based hobbyist, collector, and renovator – Paweł Michalski.",
-    "disclaimer": "The Thonet® name is a registered trademark of Thonet GmbH. The project is purely documentary and passion-driven in nature."
+    "disclaimer": "The Thonet® name is a registered trademark of Thonet GmbH. The project is purely documentary and passion-driven in nature.",
+    "dedicationButtonTitle": "Dedication"
   },
   "seo": {
     "siteName": "Bentwood Legacy: Digital Tribute to Michael Thonet",
